src/test/ui/error-codes/E0091.rs
type Foo<T> = u32; //~ ERROR E0091
type Foo2<A, B> = Box<A>; //~ ERROR E0091

fn main() {
}
